# smart-home

./: .gitignore  Basis.h  CMakeLists.txt  LICENSE  go.mod  main.cpp  main.go  orm.go  tests.go
Connectors/: IConnector.h  Usual.h
Orm/: Connections.h  statedb.h
connectors/: connectorUtils.go  go.mod
dbScripts/createTestData/: 1-statesDb.sql
dbScripts/drop/: 0-drop.sql
dbScripts/setup/: 1-create-db-states.sql
orm/: Connections.h  statedb.h
pkg/connectors/: adapter.go  connectionManager.go  go.mod  smartHome.go
pkg/utils/: go.mod  types.go
